fix upvote/downvote spacing in mobile view #164

--- a/src/Component/displayreview.module.css
+++ b/src/Component/displayreview.module.css
@@ -169,4 +169,11 @@
     margin-top: 0px;
   }
 
+  .innercontent2{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    margin-right: 0px;
+}
+
 }
